--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,4 +1,5 @@
 <div class="w-[50%] box-border my-[20px] mx-auto py-[10px] px-[30px] shadow-[4px_4px_20px] shadow-[lightgray] rounded-md ">
     <h2 class="mb-0">{{ faceSnap.title | uppercase }}</h2>
+    <p>{{faceSnap.id}}</p>
     <button (click)="onView()">VIEW</button>
 </div>
