--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,5 +1,5 @@
 <div class="landing-block">
-    <img src="assets/images/pexels-christian-heitz-285904-842711 (1).jpg" alt="Snapface logo">
+    <img src="assets/images/pexels-francesco-ungaro-1525041.jpg" alt="Snapface logo">
     <div class="landing-links">
         <button class="button" (click)="onContinue()">Continuer vers Snapface</button>
     </div>
