--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,7 @@
     <nav>
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">HOME</a>
         <a routerLinkActive="active" routerLink="facesnaps" >FACESNAPS</a>
+        <button (click)="addNewFaceSnap()" class="button">+</button>
     </nav>
 
 </header> 
