--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -1,5 +1,5 @@
-<div class="w-[50%] box-border my-[20px] mx-auto py-[10px] px-[30px] shadow-[4px_4px_20px] shadow-[lightgray] rounded-md" [ngClass]="{snapped: !snapped} ">
-    <a routerLink="/facesnaps">BACK</a>
+<div *ngIf="faceSnap$ | async as faceSnap" class="w-[50%] box-border my-[20px] mx-auto py-[10px] px-[30px] shadow-[4px_4px_20px] shadow-[lightgray] rounded-md" [ngClass]="{snapped: !snapped} ">
+    <a routerLink="/facesnaps" class="link">BACK</a>
     <h2 class="mb-0">{{ faceSnap.title | uppercase }}</h2>
     @if(faceSnap.location){
         <p>Localisation : {{ faceSnap.location }}</p>
@@ -10,7 +10,7 @@
     <p>{{ faceSnap.description }}</p>
     <p>FaceSnap cree le {{ faceSnap.createdAt | date: 'd MMMM y,  h:m:ss' | titlecase }}</p>
     <p>
-        <button class="button" (click)="onAddSnap()">{{btn}}</button>
+        <button class="button" (click)="onAddSnap(faceSnap.id)">{{btn}}</button>
         <span class="font-[600]" [ngStyle]="{ 'color': 'rgb(0,' + faceSnap.snaps + ', 0)' }">👌 {{ faceSnap.snaps }}</span>
     </p>
 </div>
